# gapaNEXT

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gapa.json  gapaNEXT.cpp  gapaNEXT.h
asio/: CMakeLists.txt
gamma/: shadowboost.gmd
src/: app.manifest  gamma.cpp  gamma.h  gapaNEXT.cpp  gapaNEXT.h  main.cpp  repl.cpp  repl.h  resource.h  resources.rc  tray.cpp  tray.h  websvr.cpp  websvr.h
webui/: AGENTS.md  README.md  index.html  package-lock.json  package.json  svelte.config.js
webui/src/: app.css
webui/src/lib/: api.ts  gamma.ts  i18n.svelte.ts  state.svelte.ts  types.ts
webui/src/lib/components/: CurveEditor.svelte  KeybindingsPanel.svelte  PreviewPanel.svelte
webui/src/routes/: +layout.svelte  +page.svelte
